--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,10 +6,8 @@
 		{
 			"label": "bg3Continue",
 			"type": "shell",
-			// mklink /J "D:\GOG\Baldurs Gate 3\Data\Mods\Armory" "D:\Mods\BG3 Modder MultiTool\The Armory\Armory\Mods\Armory"
-			// mklink /J "D:\GOG\Baldurs Gate 3\Data\Public\Armory" "D:\Mods\BG3 Modder MultiTool\The Armory\Armory\Public\Armory"
-
-			// mklink /J "D:\GOG\Baldurs Gate 3\Data\Mods\Preset_Mod_Example" "D:\Mods\BG3 Modder MultiTool\The Armory\Preset_Mod_Example\Mods\Preset_Mod_Example"
+			// mklink /J "D:\GOG\Baldurs Gate 3\Data\Mods\Ultimate_NPC_Stat_Overhaul" "D:\Mods\BG3 Modder MultiTool\Ultimate_NPC_Stat_Overhaul\Ultimate_NPC_Stat_Overhaul\Mods\Ultimate_NPC_Stat_Overhaul"
+			// mklink /J "D:\GOG\Baldurs Gate 3\Data\Public\Ultimate_NPC_Stat_Overhaul" "D:\Mods\BG3 Modder MultiTool\Ultimate_NPC_Stat_Overhaul\Ultimate_NPC_Stat_Overhaul\Public\Ultimate_NPC_Stat_Overhaul"
 			"windows": {
 				"command": "Start-Process",
 				"args": [
