--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,6 @@
 		"max_line_length": "180"
 	},
 	"bg3ModHelper.packingPriority": 0,
-	"bg3ModHelper.rootModPath": "d:\\Mods\\BG3 Modder MultiTool\\Ultimate_NPC_Stat_Overhaul",
+	"bg3ModHelper.rootModPath": "d:\\Mods\\BG3 Modder MultiTool\\Absolutes_Laboratory",
 	"bg3ModHelper.modName": "Ultimate_NPC_Stat_Overhaul",
 }
