--- a/Absolutes_Laboratory/Mods/Absolutes_Laboratory/ScriptExtender/Config.json
+++ b/Absolutes_Laboratory/Mods/Absolutes_Laboratory/ScriptExtender/Config.json
@@ -1,5 +1,5 @@
 {
     "RequiredVersion": 23,
-    "ModTable": "Ultimate_NPC_Stat_Overhaul_Rewrite",
+    "ModTable": "Absolutes_Laboratory",
     "FeatureFlags": ["Lua"]
 }
